Fixes in header for tablet

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -11,14 +11,14 @@
 
   align-items: center;
   justify-content: center;
-  grid-template-rows: repeat(2, auto);
+  grid-template-rows: minmax(auto, 64px) auto;
 
   @include for-m {
     grid-template-rows:
       minmax(auto, 64px) minmax(auto, 144px) minmax(auto, 328px)
       minmax(auto, 264px);
     padding: 16px 44px;
-    min-height: 800px;
+    min-height: 100vh;
   }
 
   @include for-l {
@@ -140,6 +140,7 @@
       grid-column: 3 / 7;
       grid-row: 4 / 5;
       align-self: start;
+      margin-top: 80px;
     }
 
     @include for-l {
