Spacing in the footer

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -13,9 +13,14 @@
     color: $white;
     text-decoration: none;
     transition: transform 0.3s ease;
+    margin-bottom: 16px;
 
     &:hover {
       transform: scale(1.03) translateX(5px);
     }
+  }
+
+  &__title {
+    margin-bottom: 16px;
   }
 }
