Layout of elements in the dropdown menu

--- a/src/styles/blocks/navigation.scss
+++ b/src/styles/blocks/navigation.scss
@@ -16,7 +16,7 @@
 
   @include grid;
 
-  grid-template-rows: 180px auto;
+  grid-template-rows:minmax(64px auto) auto;
 
   &:target {
     transform: translateX(0);
@@ -27,7 +27,7 @@
     grid-row: 1 / 2;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: start;
     max-height: 80px;
     padding: 16px;
 
