Fixes in navigation and header

--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -25,24 +25,28 @@ html:has(.menu:target) {
   }
 
   &__logo {
-    max-width: 168px;
+    max-width: 132px;
     transition: transform 0.3s ease-in-out;
 
     @include for-m {
-      max-width: 168px;
+      max-width: 132px;
     }
 
     @include for-l {
-      max-width: 168px;
+      max-width: 132px;
     }
 
     @include for-xl {
-      max-width: 136px;
+      max-width: 132px;
     }
 
     &:hover {
       transform: scale(1.03) translateX(0);
       background-color: transparent;
+    }
+
+    &--img {
+      max-width: 132px;
     }
   }
 
