--- a/src/styles/block/top-bar.scss
+++ b/src/styles/block/top-bar.scss
@@ -33,7 +33,11 @@
     letter-spacing: -1%;
     text-align: center;
 
-    &__link a {
+    &:hover {
+      border-bottom: 1px solid $color-black;
+    }
+
+    a {
       text-decoration: none;
       color: $color-black;
       font-size: 16px;
