--- a/src/styles/block/footer.scss
+++ b/src/styles/block/footer.scss
@@ -96,6 +96,10 @@
     &__link a {
       text-decoration: none;
       color: $color-white;
+
+      &:hover {
+        border-bottom: 1px solid $color-white;
+      }
     }
   }
 
