fixed file paths

--- a/src/styles/blocks/_about-us.scss
+++ b/src/styles/blocks/_about-us.scss
@@ -12,7 +12,7 @@
   &__content {
     @include page-grid;
 
-    background-image: url('../../images/bake/Crumbs.png');
+    background-image: url('/src/images/bake/Crumbs.png');
     background-repeat: no-repeat;
     background-position: 50% 75%;
     background-size: 100%;
