--- a/src/styles/blocks/_bake.scss
+++ b/src/styles/blocks/_bake.scss
@@ -81,7 +81,7 @@
       content: '';
       width: 24px;
       height: 24px;
-      background-image: url('../images/icons/arrow.svg');
+      background-image: url('/src/images/icons/arrow.svg');
       display: block;
     }
   }
