--- a/src/styles/blocks/_hero.scss
+++ b/src/styles/blocks/_hero.scss
@@ -121,7 +121,7 @@
 
     &::before {
       content: '';
-      background-image: url('../images/icons/cookie.svg');
+      background-image: url('/src/images/icons/cookie.svg');
       display: block;
       background-size: contain;
       background-position: 50%;
@@ -135,7 +135,7 @@
       background-color: $c-accent-orange;
 
       &::before {
-        background-image: url('../images/icons/cookie-hover.svg');
+        background-image: url('/src/images/icons/cookie-hover.svg');
       }
     }
 
