--- a/src/styles/blocks/_hero.scss
+++ b/src/styles/blocks/_hero.scss
@@ -96,6 +96,21 @@
       width: 544px;
       height: 546px;
     }
+
+    opacity: 0;
+    transform: translateY(20px);
+    animation: fadeInSlideUp 1.5s ease-out forwards;
+  }
+
+  @keyframes fadeInSlideUp {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
   }
 
   &__button {
@@ -121,7 +136,7 @@
 
     &::before {
       content: '';
-      background-image: url('/src/images/icons/cookie.svg');
+      background-image: url('/images/icons/cookie.svg');
       display: block;
       background-size: contain;
       background-position: 50%;
@@ -135,7 +150,7 @@
       background-color: $c-accent-orange;
 
       &::before {
-        background-image: url('/src/images/icons/cookie-hover.svg');
+        background-image: url('/images/icons/cookie-hover.svg');
       }
     }
 
