--- a/src/styles/blocks/_icons.scss
+++ b/src/styles/blocks/_icons.scss
@@ -6,34 +6,34 @@
   @include hover(transform, scale(1.1));
 
   &--menu {
-    background-image: url('/src/images/icons/burger-menu.svg');
+    background-image: url('/images/icons/burger-menu.svg');
 
     @include on-small-desktop {
       display: none;
     }
 
     &:hover {
-      background-image: url('/src/images/icons/burger-menu-hover.svg');
+      background-image: url('/images/icons/burger-menu-hover.svg');
     }
   }
 
   &--close {
-    background-image: url('/src/images/icons/icon-close.svg');
+    background-image: url('/images/icons/icon-close.svg');
 
     &:hover {
-      background-image: url('/src/images/icons/close-hover.svg');
+      background-image: url('/images/icons/close-hover.svg');
     }
   }
 
   &--facebook {
-    background-image: url('/src/images/icons/facebook.svg');
+    background-image: url('/images/icons/facebook.svg');
   }
 
   &--instagram {
-    background-image: url('/src/images/icons/instagram.svg');
+    background-image: url('/images/icons/instagram.svg');
   }
 
   &--twitter {
-    background-image: url('/src/images/icons/twitter.svg');
+    background-image: url('/images/icons/twitter.svg');
   }
 }
