--- a/src/styles/blocks/_hero.scss
+++ b/src/styles/blocks/_hero.scss
@@ -99,10 +99,10 @@
 
     opacity: 0;
     transform: translateY(20px);
-    animation: fadeInSlideUp 1.5s ease-out forwards;
+    animation: fade-in-slide-up 1.5s ease-out forwards;
   }
 
-  @keyframes fadeInSlideUp {
+  @keyframes fade-in-slide-up {
     0% {
       opacity: 0;
       transform: translateY(20px);
