--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -50,18 +50,37 @@
   }
 
   &__link {
+    position: relative;
     text-decoration: none;
     color: $main-text-color;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: -0.01em;
 
+    &::after {
+      content: '';
+      position: absolute;
+      display: block;
+      bottom: -4px;
+      height: 1px;
+      width: 100%;
+      background-color: $main-text-color;
+      transform-origin: left;
+      transition: transform 0.3s;
+      transform: scale(0);
+    }
+
+    &:hover::after {
+      transform: scale(1);
+    }
+
     &--contact-us {
+      position: relative;
+      display: flex;
+      align-items: center;
       text-transform: uppercase;
       text-decoration: none;
       color: $decorate-color;
-      display: flex;
-      align-items: center;
 
       &::before {
         content: '';
@@ -71,6 +90,23 @@
         margin-right: 7px;
         background-image: url('../images/icons/icon-phone.png');
         background-size: cover;
+      }
+
+      &::after {
+        content: '';
+        position: absolute;
+        display: block;
+        bottom: -4px;
+        height: 1px;
+        width: 100%;
+        background-color: $decorate-color;
+        transform-origin: left;
+        transition: transform 0.3s;
+        transform: scale(0);
+      }
+
+      &:hover::after {
+        transform: scale(1);
       }
     }
   }
