add task solution

--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,6 +1,13 @@
 @font-face {
-  font-family: Roboto, Arial, Helvetica, sans-serif;
-  src: url('../fonts/Roboto-Regular-webfont.woff') format('woff');
-  font-weight: normal;
+  font-family: Inter, sans-serif;
+  font-weight: 400;
   font-style: normal;
+  src: url('../fonts/Inter_18pt-Regular.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: Inter, sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  src: url('../fonts/Inter_18pt-Medium.ttf') format('ttf');
 }
