--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,10 @@
-@import 'utils';
 @import 'fonts';
-@import 'typography';
+@import 'utils';
+@import 'base';
 
-body {
-  background: $c-gray;
-}
+@import 'components/mobile-menu';
+@import 'components/header';
+@import 'components/hero';
+@import 'components/products';
+@import 'components/about';
+@import 'components/footer';
