--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,13 @@
-$c-gray: #eee;
+$font-family: 'Inter', sans-serif;
+$font-size: 16px;
+$font-weight: 400;
+$line-height: 150%;
+$letter-spacing: -0.01em;
+$main-color: #1c1a26;
+$second-color: #7f8096;
+$light-color: #fff;
+$accent-color: #f9512e;
+$focus-color: #b2341a;
+$main-bg: #eef7ff;
+$footer-bg: #1c1a26;
+$time-funclion: 550ms cubic-bezier(0.4, 0, 0.2, 1);
