--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,16 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import 'blocks/page';
+@import 'blocks/menu';
+@import 'blocks/header';
+@import 'blocks/nav';
+@import 'blocks/icons';
+@import 'blocks/hero';
+@import 'blocks/bake';
+@import 'blocks/about-us';
+@import 'blocks/footer';
 
 body {
-  background: $c-gray;
+  background: $c-light-pink;
 }
