disable scrolling when menu is opened

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -27,6 +27,10 @@ html {
     --theme-switcher-color: #{$light-pink-color};
   }
 
+  &:has(&__menu:target) {
+    overflow: hidden;
+  }
+
   &__menu {
     position: fixed;
     top: 0;
