fix background position property

--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -4,11 +4,11 @@
   background-image: url(../images/about-us/crumbs.png);
   background-repeat: no-repeat;
   background-size: 320px 300px;
-  background-position: center bottom 174px;
+  background-position: center calc(100% - 174px);
 
   @include on-tablet {
     background-size: 526px 493px;
-    background-position: center bottom 52px;
+    background-position: center calc(100% - 52px);
   }
 
   @include on-desktop {
