--- a/src/styles/blocks/hero.scss
+++ b/src/styles/blocks/hero.scss
@@ -4,13 +4,13 @@
   background-image: url(../images/hero/cookie.png);
   background-repeat: no-repeat;
   background-size: 288px 290px;
-  background-position: center bottom 96px;
+  background-position: center calc(100% - 96px);;
 
   @include on-tablet {
     padding-block: 80px 161px;
 
     background-size: 326px 328px;
-    background-position: center top 144px;
+    background-position: center 144px;
   }
 
   @include on-desktop {
