--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,12 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import 'utils/variables';
+@import 'utils/mixin';
+@import 'blocks/reset';
+@import 'blocks/page';
+@import 'blocks/header';
+@import 'blocks/top-bar';
+@import 'blocks/nav';
+@import 'blocks/hero-section';
+@import 'blocks/menu';
+@import 'blocks/products-section';
+@import 'blocks/about-us-section';
+@import 'blocks/footer';
