--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,6 +38,7 @@ body {
     flex-direction: column;
     background-color: $light-pink;
     position: sticky;
+    z-index: 99;
     top: 0;
     left: 0;
 
@@ -153,7 +154,7 @@ body {
           justify-content: center;
           gap: 4px;
 
-          @include hover(color, $black);
+          @include hover(color, $dark-orange);
 
           &::before {
             content: url(../images//icons/icon-phone.svg);
@@ -182,6 +183,7 @@ body {
           padding-top: 80px;
           padding-bottom: 228px;
           align-items: flex-start;
+          position: relative;
         }
 
         @include desktop {
@@ -209,6 +211,15 @@ body {
           @include h1;
           color: $accent-orange;
           text-align: center;
+
+          @include tablet {
+            margin: 0 auto;
+            margin-top: 146px;
+          }
+
+          @include desktop {
+            margin-top: 8px;
+          }
         }
 
         &__background {
@@ -220,12 +231,11 @@ body {
           background-size: contain;
 
           @include tablet {
-            min-height: 328px;
+            height: 328px;
             position: absolute;
-            top: 50%;
-            height: 50%;
+            top: 144px;
+            left: 50%;
             transform: translateX(-50%);
-            transform: translateY(-50%);
             z-index: -1;
           }
 
@@ -244,19 +254,20 @@ body {
           display: flex;
           align-items: center;
           justify-content: center;
+          margin: 0 auto;
           cursor: pointer;
 
           @include hover(background-color, $accent-orange);
 
           @include tablet {
             width: 326px;
-            margin: 0 auto;
-            margin-top: 80px;
+            margin-top: 210px;
           }
 
           @include desktop {
             width: 260px;
             margin: 0;
+            margin-top: 64px;
           }
 
           &__content {
@@ -299,6 +310,128 @@ body {
               &::before {
                 content: url(../images/icons/icon-cookie-disabled.svg);
               }
+            }
+          }
+        }
+      }
+
+      &--products {
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 56px;
+
+        @include tablet {
+          gap: 80px;
+        }
+
+        &__header {
+          width: 100%;
+          height: auto;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          gap: 24px;
+
+          .title {
+            @include h2;
+
+            color: $accent-orange;
+            text-align: left;
+          }
+
+          .text {
+            @include body-text;
+
+            color: $black;
+            text-align: left;
+          }
+        }
+
+        &__product-group {
+          width: 100%;
+          height: auto;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          gap: 56px;
+          align-items: center;
+
+          @include tablet {
+            flex-direction: row;
+            justify-content: flex-start;
+            gap: 24px;
+          }
+
+          &--even {
+            @include tablet {
+              justify-content: flex-end;
+            }
+          }
+
+          .card {
+            width: 288px;
+            height: auto;
+            @include tablet {
+              width: 328px;
+            }
+
+            @include desktop {
+              width: 402px;
+            }
+
+            &__img {
+              &-wrap {
+                width: 100%;
+                height: 356px;
+                margin-bottom: 16px;
+
+                @include tablet {
+                  height: 424px;
+                }
+
+                @include desktop {
+                  height: 512px;
+                }
+              }
+
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+            }
+
+            &__title {
+              @include uppercase;
+              color: $black;
+              margin-bottom: 8px;
+            }
+
+            &__text {
+              @include body-text;
+              color: $black;
+              margin-bottom: 16px;
+            }
+
+            &__order-button {
+              @include uppercase;
+              color: $accent-orange;
+              text-decoration: none;
+              display: flex;
+              justify-content: flex-start;
+              align-items: center;
+              gap: 4px;
+              transition: color 0.3s ease-in-out;
+
+              &::before {
+                content: url(../images/icons/icon-arrow.svg);
+                display: block;
+                width: 24px;
+                height: 24px;
+              }
+
+              @include hover(color, $dark-orange);
             }
           }
         }
