--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -322,9 +322,15 @@ body {
         flex-direction: column;
         justify-content: space-between;
         gap: 56px;
+        padding-bottom: 72px;
 
         @include tablet {
           gap: 80px;
+          padding-bottom: 152px;
+        }
+
+        @include desktop {
+          padding-bottom: 178px;
         }
 
         &__header {
@@ -434,6 +440,265 @@ body {
               @include hover(color, $dark-orange);
             }
           }
+        }
+      }
+
+      &--about {
+        position: relative;
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 64px;
+        padding-bottom: 72px;
+
+        @include tablet {
+          gap: 72px;
+          padding-bottom: 152px;
+        }
+
+        @include desktop {
+          gap: 144px;
+          padding-bottom: 56px;
+          height: 673px;
+        }
+
+        &__background {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          position: absolute;
+          top: 0;
+          right: 50%;
+          transform: translateX(50%);
+          z-index: -1;
+
+          @include tablet {
+            width: 526px;
+            height: 493px;
+            object-fit: contain;
+            top: 51px;
+            right: 50%;
+            transform: translateX(50%);
+          }
+
+          @include desktop {
+            width: 718px;
+            height: 673px;
+            top: 0;
+            right: 157px;
+          }
+        }
+
+        &__info {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          align-items: flex-start;
+          gap: 32px;
+
+          @include tablet {
+            flex-direction: row;
+            gap: 24px;
+          }
+
+          &__title {
+            @include h2;
+            color: $accent-orange;
+
+            @include tablet {
+              min-width: 328px;
+            }
+
+            @include desktop {
+              min-width: 544px;
+            }
+          }
+
+          &__text {
+            @include body-text;
+            color: $black;
+          }
+        }
+
+        &__statistics {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          justify-content: space-between;
+          gap: 41px;
+
+          @include tablet {
+            gap: 80px;
+          }
+
+          @include desktop {
+            flex-direction: row;
+            gap: 24px;
+          }
+
+          &__blocks-wrap {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+            gap: 41px;
+
+            @include tablet {
+              flex-direction: row;
+              gap: 24px;
+            }
+          }
+
+          &__block {
+            min-width: 288px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            gap: 8px;
+
+            @include tablet {
+              min-width: 328px;
+            }
+
+            @include desktop {
+              min-width: 280px;
+            }
+
+            &__figures {
+              @include big-text;
+              color: $accent-orange;
+            }
+
+            &__text {
+              @include body-text;
+              color: $black;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.footer {
+  background-color: $black;
+  padding: 56px 16px;
+
+  @include tablet {
+    padding-block: 88px 44px;
+  }
+
+  &__info-sections {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 64px;
+
+    @include tablet {
+      flex-direction: row;
+      gap: 24px;
+    }
+  }
+
+  &__section {
+    width: 288px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    &--socials {
+      gap: 40px;
+      @include tablet {
+        gap: 96px;
+      }
+
+      @include desktop {
+        gap: 61px;
+      }
+    }
+
+    &--contacts {
+      gap: 40px;
+
+      @include tablet {
+        width: 328px;
+      }
+
+      @include desktop {
+        width: 544px;
+      }
+    }
+  }
+
+  &__logo {
+    width: 168px;
+    height: 40px;
+  }
+
+  &__title {
+    @include h2;
+    color: $white;
+  }
+
+  &__subsections {
+    &__wrap {
+      width: 100%;
+      height: auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      gap: 40px;
+
+      @include desktop {
+        flex-direction: row;
+        gap: 24px;
+      }
+    }
+  }
+
+  &__subsection {
+    width: 100%;
+    max-width: 288px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 16px;
+
+    &__title {
+      @include uppercase;
+      color: $gray;
+    }
+
+    &__list {
+      width: 100%;
+      height: auto;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: space-between;
+      gap: 16px;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+
+      &__item {
+        &__link {
+          @include body-text;
+          color: $white;
+          text-decoration: none;
+
+          &:visited {
+            color: $white;
+          }
+
+          @include hover(color, $accent-orange);
         }
       }
     }
