--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -18,7 +18,7 @@
 }
 
 @mixin h1 {
-  font-family: Roboto;
+  font-family: Inter, sans-serif;
   font-weight: 400;
   font-size: 64px;
   line-height: 85%;
@@ -33,12 +33,10 @@
   @include desktop {
     font-size: 130px;
   }
-
-
 }
 
 @mixin h2 {
-  font-family: Roboto;
+  font-family: Inter, sans-serif;
   font-weight: 400;
   font-size: 48px;
   line-height: 85%;
@@ -56,7 +54,7 @@
 }
 
 @mixin big-text {
-  font-family: Roboto;
+  font-family: Inter, sans-serif;
   font-weight: 400;
   font-size: 96px;
   line-height: 85%;
@@ -66,7 +64,7 @@
 }
 
 @mixin body-text {
-  font-family: Roboto;
+  font-family: Inter, sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 150%;
@@ -75,7 +73,7 @@
 }
 
 @mixin uppercase {
-  font-family: Roboto;
+  font-family: Inter, sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 100%;
