--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,12 +1,11 @@
 $c-gray: #eee;
-$dark-orange: #B2341A;
-$accent-orange: #F9512E;
-$light-orange: #FBA28F;
-$light-pink: #FFEEFC;
-$light-blue: #EEF7FF;
-$black: #1C1A26;
-$gray: #7F8096;
-$white: #FFFFFF;
-
+$dark-orange: #b2341a;
+$accent-orange: #f9512e;
+$light-orange: #fba28f;
+$light-pink: #ffeefc;
+$light-blue: #eef7ff;
+$black: #1c1a26;
+$gray: #7f8096;
+$white: #fff;
 $tablet-min-width: 640px;
 $desktop-min-width: 1280px;
