--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -53,11 +53,14 @@ body {
     }
 
     &--canTransform {
+      padding-inline: 16px;
+      position: fixed;
       height: 100vh;
     }
 
     &__mobile-top-section {
       width: 100%;
+      height: 64px;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -604,7 +607,11 @@ body {
   padding: 56px 16px;
 
   @include tablet {
-    padding-block: 88px 44px;
+    padding: 88px 44px;
+  }
+
+  @include desktop {
+    padding-inline: 124px;
   }
 
   &__info-sections {
