add functional header

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import 'blocks';
 
-body {
-  background: $c-gray;
+.page {
+  margin: 0;
+  background: $color-background;
+  min-width: 320px;
+
+  &:has(.menu:target) {
+    overflow: hidden;
+  }
 }
