--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,29 @@
-$c-gray: #eee;
+// Cores
+$color-white: #fff;
+$color-grey: #7f8096;
+$color-black: #1c1a26;
+$color-dark-orange: #b2341a;
+$color-accent-orange: #f9512e;
+$color-light-orange: #fba28f;
+$color-light-pink: #ffeefc;
+$color-light-blue: #eef7ff;
+
+// Cores por função
+$color-primary: $color-accent-orange;
+$color-secondary: $color-light-orange;
+$color-text: $color-black;
+$color-text-light: $color-grey;
+$color-background: $color-light-pink;
+$color-background-alt: $color-light-blue;
+
+// Breakpoints
+$breakpoint-tablet: 640px;
+$breakpoint-desktop: 1024px;
+$breakpoint-desktop-xl: 1200px;
+$breakpoint-tablet-mobile-only: $breakpoint-desktop - 1;
+
+// Font
+$font-primary: Inter, sans-serif;
+
+// Transition
+$transition-time: 0.3s;
