--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -8,6 +8,7 @@
 
   &__logo {
     display: flex;
+    z-index: 3;
 
     &-image {
       width: 136px;
@@ -28,7 +29,7 @@
     height: 24px;
     background-image: url('../images/icons/icon-menu.png');
     background-size: contain;
-    z-index: 1;
+    z-index: 3;
 
     @include hover-image('../images/icons/icon-menu-hover.png');
 
@@ -61,6 +62,8 @@
       align-items: center;
       width: 100dvw;
       height: 100dvh;
+      background-color: $color-background;
+      z-index: 2;
 
       transform: translateX(100%);
       transition: transform 0.5s ease-in-out;
@@ -88,7 +91,7 @@
 
     &:last-child {
       @extend %uppercase;
-      
+
       color: $color-primary;
       margin-right: 0;
     }
