--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,26 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import './blocks/page';
+@import './blocks/header';
+@import './blocks/nav';
+@import './blocks/button';
+@import './blocks/icon';
+@import './blocks/main';
+@import './blocks/top-bar';
+@import './blocks/menu';
+@import './blocks/products';
+@import './blocks/product-card';
+@import './blocks/section-title';
+@import './blocks/footer';
+@import './blocks/about';
 
 body {
-  background: $c-gray;
+  background: $c-light-blue;
+  margin: 0;
+  min-width: 320px;
+}
+
+* {
+  box-sizing: border-box;
 }
