add task solution

--- a/src/styles/_blocks.scss
+++ b/src/styles/_blocks.scss
@@ -1,2 +1,5 @@
 @import 'blocks/header';
 @import 'blocks/home';
+@import 'blocks/products';
+@import 'blocks/about-us';
+@import 'blocks/contact-us';
