--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -15,6 +15,7 @@ $color-text: $color-black;
 $color-text-light: $color-grey;
 $color-background: $color-light-pink;
 $color-background-alt: $color-light-blue;
+$color-background-footer: $color-black;
 
 // Breakpoints
 $breakpoint-tablet: 640px;
