--- a/src/styles/blocks/_home.scss
+++ b/src/styles/blocks/_home.scss
@@ -27,7 +27,6 @@
   }
 
   &__container {
-    // border: 2px solid blue;
     grid-column: 1 / -1;
     position: relative;
     width: 100%;
@@ -41,6 +40,7 @@
       position: absolute;
       width: 92.5%;
       height: 546px;
+      margin-bottom: 0;
     }
 
     @include on-desktop-xl {
@@ -72,11 +72,6 @@
 
   &__title {
     color: $color-primary;
-    font-weight: 400;
-    font-size: 64px;
-    line-height: 85%;
-    letter-spacing: -5%;
-
     margin: 0;
 
     @include on-tablet {
@@ -85,16 +80,6 @@
       left: 50%;
       width: 100%;
       transform: translate(-50%, -50%);
-
-      font-size: 80px;
-    }
-
-    @include on-desktop {
-      font-size: 136px;
-    }
-
-    @include on-desktop-xl {
-      font-size: 144px;
     }
   }
 
@@ -115,7 +100,7 @@
     align-items: center;
     justify-content: center;
     gap: 4px;
-    z-index: 3;
+    z-index: 1;
 
     &::before {
       content: '';
@@ -159,9 +144,5 @@
     @include on-desktop {
       grid-column: 1 / -1;
     }
-  }
-
-  @include on-desktop {
-    // padding: 0;
   }
 }
