--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -15,3 +15,45 @@
   letter-spacing: 2%;
   text-transform: uppercase;
 }
+
+%big-text {
+  font-family: $font-primary;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 96px;
+  line-height: 85%;
+  letter-spacing: -0.05em;
+  text-transform: uppercase;
+}
+
+%h1 {
+  @extend %big-text;
+
+  font-size: 64px;
+
+  @include on-tablet {
+    font-size: 80px;
+  }
+
+  @include on-desktop {
+    font-size: 136px;
+  }
+
+  @include on-desktop-xl {
+    font-size: 144px;
+  }
+}
+
+%h2 {
+  @extend %big-text;
+
+  font-size: 48px;
+
+  @include on-tablet {
+    font-size: 56px;
+  }
+
+  @include on-desktop {
+    font-size: 72px;
+  }
+}
