--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,7 +5,7 @@ h1 {
 
 @font-face {
   font-family: Roboto, Arial, Helvetica, sans-serif;
-  src: url("../fonts/Roboto-Regular-webfont.woff") format("woff");
+  src: url('../fonts/Roboto-Regular-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
