add task solution

--- a/src/styles/blocks/_about-us.scss
+++ b/src/styles/blocks/_about-us.scss
@@ -12,7 +12,8 @@
 
   &__title {
     grid-column: 1 / -1;
-    color: $color-primary;
+    color: $color-title-primary;
+    transition: 0.5s;
     margin: 0 0 32px;
 
     @include on-tablet {
@@ -75,7 +76,8 @@
   &__big-text {
     @extend %big-text;
 
-    color: $color-primary;
+    color: $color-title-primary;
+    transition: 0.5s;
     margin: 0 0 8px;
   }
 
