--- a/src/styles/blocks/_contact-us.scss
+++ b/src/styles/blocks/_contact-us.scss
@@ -55,14 +55,16 @@
 
   &__link {
     @include reset-links;
+    @include hover-link-animation;
 
-    color: $color-white;
+    color: $color-text-very-light;
+
   }
 
   &__title {
     grid-column: 1 / -1;
     width: 274px;
-    color: $color-white;
+    color: $color-text-very-light;
     margin: 0 0 40px;
 
     @include on-tablet {
@@ -94,8 +96,9 @@
 
   &__phone {
     @include reset-links;
+    @include hover-link-animation;
 
-    color: $color-white;
+    color: $color-text-very-light;
     grid-column: 1 / -1;
     display: block;
 
@@ -107,6 +110,8 @@
   }
 
   &__email-us {
+    @include hover-link-animation;
+    
     grid-column: 1 / -1;
     margin: 0 0 40px;
 
@@ -129,7 +134,7 @@
     @include reset-links;
 
     display: block;
-    color: $color-white;
+    color: $color-text-very-light;
     margin-block: 16px 0;
   }
 
@@ -162,30 +167,30 @@
     &--facebook {
       mask-image: url('../images/icons/icon-facebook.png');
 
-      @include hover(background-color, $color-white);
+      @include hover(background-color, $color-text-very-light);
 
       &:focus {
-        background-color: $color-white;
+        background-color: $color-text-very-light;
       }
     }
 
     &--instagram {
       mask-image: url('../images/icons/icon-instagram.png');
 
-      @include hover(background-color, $color-white);
+      @include hover(background-color, $color-text-very-light);
 
       &:focus {
-        background-color: $color-white;
+        background-color: $color-text-very-light;
       }
     }
 
     &--twitter {
       mask-image: url('../images/icons/icon-twitter.png');
 
-      @include hover(background-color, $color-white);
+      @include hover(background-color, $color-text-very-light);
 
       &:focus {
-        background-color: $color-white;
+        background-color: $color-text-very-light;
       }
     }
   }
