--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,12 +3,22 @@
 @import 'typography';
 @import 'blocks';
 
+html {
+  scroll-behavior: smooth;
+}
+
 .page {
   margin: 0;
   background: $color-background;
   min-width: 320px;
+  transition: background-color 0.5s;
 
   &:has(.menu:target) {
     overflow: hidden;
   }
+}
+
+.blue-theme {
+  --color-background: #{$color-light-blue};
+  --color-title-primary: #{$color-black};
 }
