--- a/src/styles/blocks/_products.scss
+++ b/src/styles/blocks/_products.scss
@@ -50,7 +50,8 @@
 
   &__title {
     grid-column: 1 / -1;
-    color: $color-primary;
+    color: $color-title-primary;
+    transition: 0.5s;
     margin: 0 0 24px;
   }
 
@@ -103,6 +104,7 @@
   }
 
   &__btn {
+    @include reset-links;
     @extend %uppercase;
 
     color: $color-primary;
@@ -114,7 +116,7 @@
     gap: 4px;
 
     &:focus {
-      color: $color-dark-orange;
+      color: $color-secondary;
       transition: color $transition-time;
     }
 
@@ -133,29 +135,33 @@
     }
 
     &:focus::before {
-      background-color: $color-dark-orange;
+      background-color: $color-secondary;
     }
 
-    position: relative;
-    &::after {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 1px;
-      bottom: -4px;
-      background-color: $color-primary;
-      transform: scale(0);
-      transform-origin: left;
-      transition: transform $transition-time;
+    .span {
+      position: relative;
+
+      &::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 1px;
+        left: 0;
+        bottom: -4px;
+        background-color: $color-primary;
+        transform: scaleX(0);
+        transform-origin: left;
+        transition: transform $transition-time;
+      }
     }
 
-    &:hover::after {
+    &:hover .span::after {
       transform: scale(1);
     }
 
-    &:focus::after {
+    &:focus .span::after {
       transform: scale(1);
-      background-color: $color-dark-orange;
+      background-color: $color-secondary;
       transition: background-color $transition-time;
     }
   }
