--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -9,13 +9,25 @@ $color-light-pink: #ffeefc;
 $color-light-blue: #eef7ff;
 
 // Cores por função
-$color-primary: $color-accent-orange;
-$color-secondary: $color-light-orange;
-$color-text: $color-black;
-$color-text-light: $color-grey;
-$color-background: $color-light-pink;
-$color-background-alt: $color-light-blue;
-$color-background-footer: $color-black;
+$color-primary: var(--color-primary);
+$color-secondary: var(--color-secondary);
+$color-text: var(--color-text);
+$color-text-light: var(--color-text-light);
+$color-text-very-light: var(--color-text-very-light);
+$color-title-primary: var(--color-title-primary);
+$color-background: var(--color-background);
+$color-background-footer: var(--color-background-footer);
+
+:root {
+  --color-primary: #{$color-accent-orange};
+  --color-secondary: #{$color-dark-orange};
+  --color-text: #{$color-black};
+  --color-text-light: #{$color-grey};
+  --color-text-very-light: #{$color-white};
+  --color-title-primary: #{$color-accent-orange};
+  --color-background: #{$color-light-pink};
+  --color-background-footer: #{$color-black};
+}
 
 // Breakpoints
 $breakpoint-tablet: 640px;
