improve hover link menu

--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -115,24 +115,28 @@
       color: $color-secondary;
     }
 
-    position: relative;
-    &::after {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 1px;
-      bottom: -4px;
-      background-color: $color-primary;
-      transform: scale(0);
-      transform-origin: left;
-      transition: transform $transition-time;
+    .span {
+      position: relative;
+
+      &::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 1px;
+        left: 0;
+        bottom: -4px;
+        background-color: $color-primary;
+        transform: scale(0);
+        transform-origin: left;
+        transition: transform $transition-time;
+      }
     }
 
-    &:hover::after {
+    &:hover .span::after {
       transform: scale(1);
     }
 
-    &:focus::after {
+    &:focus .span::after {
       transform: scale(1);
       background-color: $color-secondary;
     }
