--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
+@import './utils/vars';
+@import './fonts';
+@import './utils/mixins';
 @import './blocks/page';
 @import './blocks/header';
 @import './blocks/nav';
