--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,20 @@
-$c-gray: #eee;
+// #region screen sizes
+$max-width-content: 1112px;
+$screen-tablet: 640px;
+$screen-desktop: 1024px;
+$screen-desktop-lg: 1200px;
+
+// #endregion
+
+// #region colors
+
+$dark-orange: #b2341a;
+$accent-orange: #f9512e;
+$Light-orange: #fba28f;
+$light-pink: #ffeefc;
+$light-blue: #eef7ff;
+$black: #1c1a26;
+$white: #fff;
+$grey: #7f8096;
+
+// #endregion
