add task solution

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -104,7 +104,7 @@
   }
 
   &--icon--phone::before {
-    @include icon(url(../images/icons/icon-phone.svg));
+    @include icon(url(../../images/icons/icon-phone.svg));
   }
 
   &--icon--phone:hover::before {
@@ -112,10 +112,10 @@
   }
 
   &--icon--cookie::before {
-    @include icon(url(../images/icons/Icon-cookie.svg));
+    @include icon(url(../../images/icons/icon-cookie.svg));
   }
 
   &--icon--arrow-right::before {
-    @include icon(url(../images/icons/icon-arrow-right.svg));
+    @include icon(url(../../images/icons/Icon-arrow-right.svg));
   }
 }
