--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-image: url(../images/hero-bg-cookie.png);
+  background-image: url(../../images/hero-bg-cookie.png);
   background-position-y: 75%;
   background-position-x: 50%;
   background-repeat: no-repeat;
