--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -8,7 +8,7 @@
   @include hover(transform, scale(1.1));
 
   &--menu {
-    @include icon(url(../images/icons/icon-menu.svg));
+    @include icon(url(../../images/icons/Icon-menu.svg));
 
     @include on-desktop {
       display: none;
@@ -16,19 +16,19 @@
   }
 
   &--close {
-    @include icon(url(../images/icons/icon-close.svg));
+    @include icon(url(../../images/icons/Icon-close.svg));
   }
 
   &--facebook {
-    @include icon(url(../images/icons/icon-facebook.svg));
+    @include icon(url(../../images/icons/Icon-facebook.svg));
   }
 
   &--instagram {
-    @include icon(url(../images/icons/icon-instagram.svg));
+    @include icon(url(../../images/icons/Icon-instagram.svg));
   }
 
   &--twitter {
-    @include icon(url(../images/icons/icon-twitter.svg));
+    @include icon(url(../../images/icons/Icon-twitter.svg));
   }
 
   &--facebook,
