--- a/src/styles/blocks/about.scss
+++ b/src/styles/blocks/about.scss
@@ -1,5 +1,5 @@
 .about-us {
-  background-image: url(../images/crumbs.png);
+  background-image: url(../../images/crumbs.png);
   background-position-y: 75%;
   background-position-x: 50%;
   background-size: contain;
