--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,21 @@
 @import 'fonts';
 @import 'typography';
 
+
+@import 'blocks/header';
+@import 'blocks/icon';
+@import 'blocks/menu';
+@import 'blocks/page';
+@import 'blocks/top-bar';
+@import 'blocks/button';
+@import 'blocks/footer';
+
+
+
 body {
-  background: $c-gray;
+  background: #EEF7FF;
+}
+
+* {
+  box-sizing: border-box;
 }
