--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -34,6 +34,9 @@
   &__networks {
     fill: #F9512E;
 
+    @include hover(transform, scale(1.2));
+
+
     &:hover svg {
       fill: #EEF7FF;
      }
