--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -25,6 +25,9 @@
     text-transform: uppercase;
     text-decoration: none;
     color: #F9512E;
+
+    @include hover(transform, scale(1.1));
+
   }
 
   &__link {
