--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -4,6 +4,10 @@
 
   &__wrapper {
     @include page-grid;
+
+    @include on-tablet {
+      padding-top: 80px;
+    }
   }
 
 
@@ -14,7 +18,8 @@
     margin-bottom: 40px;
 
     @include on-tablet {
-    grid-column: 1/3;
+      grid-column: 1/3;
+      padding-top: 0;
     }
   }
 
@@ -69,7 +74,8 @@
 
     @include on-tablet {
       grid-column: 1/5;
-      }
+      margin-bottom: 88px;
+    }
   }
 
   &__menu {
@@ -79,11 +85,18 @@
 
     @include on-tablet {
       grid-column: 1/5;
+      margin-bottom: 0;
+    }
+
+    @include on-desktop {
+      margin-bottom: 40px;
+
       }
 
   }
 
   &__title {
+    grid-column: 1/-1;
     font-family: 'Inter', sans-serif;
     font-size: 48px;
     font-weight: 400;
@@ -97,6 +110,8 @@
     text-transform: uppercase;
 
     @include on-tablet {
+      grid-row: 1/-1;
+      grid-column: 5/9;
       font-size: 56px;
       }
 
@@ -109,7 +124,12 @@
 
     @include on-tablet {
       grid-column: 5/9;
-      }
+    }
+
+    @include on-desktop {
+      grid-column: 5/7;
+
+    }
   }
 
   &__mail {
@@ -119,6 +139,12 @@
 
     @include on-tablet {
       grid-column: 5/9;
+      margin-bottom: 48px;
+      }
+
+      @include on-desktop {
+        grid-column: 7/9;
+
       }
 
   }
