--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Inter';
+  font-family: Inter;
   src: url('../fonts/Inter-VariableFont_opsz,wght.ttf') format('truetype');
   font-weight: 100 900;
   font-style: normal;
