--- a/src/styles/blocks/about.scss
+++ b/src/styles/blocks/about.scss
@@ -1,7 +1,7 @@
 .about {
   @include page-grid;
 
-  background-image: url(../images/header/Crumbs.svg);
+  background-image: url(../images/header/crumbs_mob.png);
   background-repeat: no-repeat;
   background-position: bottom 200px left;
   background-size: contain;
@@ -9,24 +9,26 @@
   margin-bottom: 72px;
 
   @include on-tablet {
-    margin-bottom: 152px;
+    background-image: url(../images/header/crumbs_tablet.png);
+    background-position: bottom 80px right 80px;
+    background-size: auto;
 
+    margin-bottom: 152px;
   }
 
   @include on-desktop {
-    margin-bottom: 349px;
-
+    background-image: url(../images/header/crumbs_desktop.png);
+    background-position: bottom 50px right 90px;
+    margin-bottom: 56px;
+    padding-bottom: 293px;
   }
-
 
   &__title {
     // margin-bottom: 64px;
     // grid-column: 1/-1;
 
-
-
     &--top {
-      font-family: 'Inter', sans-serif;
+      font-family: Inter, sans-serif;
       font-size: 48px;
       font-weight: 400;
       line-height: 85%;
@@ -44,15 +46,14 @@
       @include on-desktop {
         font-size: 72px;
 
+        margin-bottom: 144px;
       }
-
     }
-
   }
 
   &__text {
     grid-column: 1/-1;
-    font-family: 'Inter',sans-serif;
+    font-family: Inter, sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 150%;
@@ -60,28 +61,14 @@
     margin: 0;
     margin-bottom: 64px;
 
-
     @include on-tablet {
       grid-column: 5/9;
       margin-bottom: 72px;
     }
-
-
-
   }
 
   &__info {
-
     margin-bottom: 48px;
-    // display: flex;
-    // flex-direction: column;
-    // gap: 48px;
-
-    // grid-column: 1/-1;
-
-    // @include on-tablet {
-    //   grid-column: 1/4;
-    // }
 
     &--last {
       grid-column: 1/-1;
@@ -94,14 +81,13 @@
 
       @include on-desktop {
         grid-column: 7/9;
-
       }
     }
 
     &--number {
       margin-bottom: 8px;
 
-      font-family: Inter;
+      font-family: Inter, sans-serif;
       font-size: 96px;
       font-weight: 400;
       line-height: 85%;
@@ -109,17 +95,16 @@
     }
 
     &--text {
-      font-family: Inter;
+      font-family: Inter, sans-serif;
       font-size: 16px;
       font-weight: 400;
       line-height: 150%;
 
-      color: #7F8096;
+      color: #7f8096;
     }
 
     &--one {
       grid-column: 1/-1;
-
 
       @include on-tablet {
         grid-column: 1/5;
@@ -127,7 +112,6 @@
 
       @include on-desktop {
         grid-column: 1/3;
-
       }
     }
 
@@ -140,7 +124,6 @@
 
       @include on-desktop {
         grid-column: 3/5;
-
       }
     }
 
@@ -153,10 +136,7 @@
 
       @include on-desktop {
         grid-column: 5/7;
-
       }
     }
-
   }
-
 }
