--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -1,15 +1,15 @@
 .button {
   grid-column: 1/-1;
 
+  margin-bottom: 40px;
+
   @include on-tablet {
     grid-column: 3/7;
   }
 
   @include on-desktop {
     grid-column: 1/3;
-
   }
-
 
   &__style {
     cursor: pointer;
@@ -21,27 +21,26 @@
 
     width: 288px;
     height: 56px;
-    border: 2px solid #F9512E;
+    border: 2px solid #f9512e;
     border-radius: 32px;
 
-    font-family: 'Inter', sans-serif;
+    font-family: Inter, sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 100%;
-    color: #F9512E;
+    color: #f9512e;
     text-transform: uppercase;
 
-    background-color: #EEF7FF;
+    background-color: #eef7ff;
 
     &:hover {
-      background-color: #F9512E;
-      color: #EEF7FF;
+      background-color: #f9512e;
+      color: #eef7ff;
     }
 
     &:active {
-      background-color: #B2341A;
-      border: #B2341A;
-
+      background-color: #b2341a;
+      border: #b2341a;
     }
 
     @include on-tablet {
@@ -54,5 +53,4 @@
       max-width: 280px;
     }
   }
-
 }
