--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,4 +1,9 @@
 .header {
+  margin-bottom: 190px;
+
+  @include on-desktop {
+    margin-bottom: 300px;
+  }
 
   &__menu {
     display: none;
@@ -17,7 +22,7 @@
       position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%,-50%);
+      transform: translate(-50%, -50%);
     }
   }
 
@@ -30,7 +35,7 @@
 
     margin-bottom: 32px;
 
-    font-family: 'Inter', sans-serif;
+    font-family: Inter, sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 150%;
@@ -47,7 +52,7 @@
 
       margin-bottom: 8px;
     }
-    }
+  }
 
   &__center {
     grid-column: 1/-1;
@@ -60,7 +65,6 @@
     }
 
     @include on-desktop {
-
       margin-bottom: 64px;
     }
   }
@@ -70,7 +74,7 @@
 
     margin: 0;
 
-    font-family: 'Inter', sans-serif;
+    font-family: Inter, sans-serif;
     font-size: 64px;
     font-weight: 400;
     line-height: 85%;
