--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -2,14 +2,13 @@
   overflow: auto;
   box-sizing: border-box;
   height: 100vh;
-  background-color: #EEF7FF;
+  background-color: #eef7ff;
 
   &__text {
     display: flex;
     gap: 24px;
     flex-direction: column;
     align-items: center;
-
   }
 
   &__contact {
@@ -17,29 +16,27 @@
     gap: 4px;
     align-items: center;
 
-    font-family: Inter;
+    font-family: Inter, sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
 
     text-transform: uppercase;
     text-decoration: none;
-    color: #F9512E;
+    color: #f9512e;
 
     @include hover(transform, scale(1.1));
-
   }
 
   &__link {
     position: relative;
 
-
-    font-family: Inter;
+    font-family: Inter, sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 150%;
 
-    color: #1C1A26;
+    color: #1c1a26;
     text-decoration: none;
 
     &::after {
@@ -55,7 +52,7 @@
       width: 100%;
       height: 1px;
 
-      background-color: #F9512E;
+      background-color: #f9512e;
 
       transition: transform 0.3s;
     }
@@ -64,6 +61,4 @@
       transform: scale(1);
     }
   }
-
-
 }
