--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #1C1A26;
+  background-color: #1c1a26;
   margin: 0;
 
   &__wrapper {
@@ -9,7 +9,6 @@
       padding-top: 80px;
     }
   }
-
 
   &__logo {
     grid-column: 1/-1;
@@ -31,39 +30,32 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-
-
   }
 
   &__item {
-
     &--text {
-      font-family: 'Inter', sans-serif;
+      font-family: Inter, sans-serif;
       font-weight: 400;
       font-size: 16px;
       line-height: 150%;
-      color: #7F8096;
+      color: #7f8096;
       text-transform: uppercase;
-
     }
   }
 
   &__link {
-    font-family: 'Inter', sans-serif;
+    font-family: Inter, sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
 
-    color: #FFFFFF;
+    color: #fff;
     text-decoration: none;
 
     &:hover {
-      color: #F9512E;
+      color: #f9512e;
     }
-
-   }
-
-
+  }
 
   &__networks {
     grid-column: 1/-1;
@@ -90,14 +82,12 @@
 
     @include on-desktop {
       margin-bottom: 40px;
-
-      }
-
+    }
   }
 
   &__title {
     grid-column: 1/-1;
-    font-family: 'Inter', sans-serif;
+    font-family: Inter, sans-serif;
     font-size: 48px;
     font-weight: 400;
     line-height: 85%;
@@ -105,7 +95,7 @@
     margin: 0;
     margin-bottom: 40px;
 
-    color: #FFFFFF;
+    color: #fff;
 
     text-transform: uppercase;
 
@@ -113,8 +103,7 @@
       grid-row: 1/-1;
       grid-column: 5/9;
       font-size: 56px;
-      }
-
+    }
   }
 
   &__contact {
@@ -128,7 +117,6 @@
 
     @include on-desktop {
       grid-column: 5/7;
-
     }
   }
 
@@ -140,32 +128,27 @@
     @include on-tablet {
       grid-column: 5/9;
       margin-bottom: 48px;
-      }
+    }
 
-      @include on-desktop {
-        grid-column: 7/9;
-
-      }
-
+    @include on-desktop {
+      grid-column: 7/9;
+    }
   }
-
-
 
   &__bottom {
     grid-column: 1/-1;
 
-    font-family: 'Inter',sans-serif;
+    font-family: Inter, sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 150%;
 
-    color: #7F8096;
+    color: #7f8096;
 
     padding-bottom: 56px;
 
     @include on-tablet {
       grid-column: 5/9;
-      }
+    }
   }
-
 }
