--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -4,7 +4,6 @@
   width: 24px;
   height: 24px;
 
-
   &--menu {
     background-image: url(../images/icons/icon-menu.svg);
 
@@ -18,27 +17,24 @@
   }
 
   &--button {
-    fill: #F9512E;
+    fill: #f9512e;
 
     &:hover svg {
-     fill: #EEF7FF;
+      fill: #eef7ff;
     }
   }
 
   &--all {
     @include hover(transform, scale(1.2));
-
   }
 
-
   &__networks {
-    fill: #F9512E;
+    fill: #f9512e;
 
     @include hover(transform, scale(1.2));
 
-
     &:hover svg {
-      fill: #EEF7FF;
-     }
+      fill: #eef7ff;
+    }
   }
 }
