--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,6 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
-
-
 @import 'blocks/header';
 @import 'blocks/icon';
 @import 'blocks/menu';
@@ -11,11 +9,10 @@
 @import 'blocks/button';
 @import 'blocks/footer';
 @import 'blocks/about';
-
-
+@import 'blocks/product';
 
 body {
-  background: #EEF7FF;
+  background: #eef7ff;
 }
 
 * {
