add task solution

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,5 @@
-$c-gray: #eee;
+$c-gray: #ffeefc;
+$tablet-min-width: 640px;
+$desktop-min-width: 1023px;
+$desktop-xl-min-width: 1199px;
+$main-text-color: #1c1a26;
