--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,15 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import 'blocks/container';
+@import 'blocks/page';
+@import 'blocks/top-bar';
+@import 'blocks/header';
+@import 'blocks/icon';
+@import 'blocks/button';
+@import 'blocks/menu';
+@import 'blocks/nav';
+@import 'blocks/mains';
+@import 'blocks/top.nav';
+@import 'blocks/abouts';
+@import 'blocks/footer';
