--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,87 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
+@mixin hover($property, $toValue) {
+  transition: #{$property} 0.3s;
   &:hover {
-    #{$_property}: $_toValue;
+    #{$property}: $toValue;
   }
+}
+
+@mixin on-tablet {
+  @media (min-width: $tablet-min-width) {
+    @content;
+  }
+}
+
+@mixin on-desktop {
+  @media (min-width: $desktop-min-width) {
+    @content;
+  }
+}
+
+@mixin on-desktop-xl {
+  @media (min-width: $desktop-xl-min-width) {
+    @content;
+  }
+}
+
+@mixin content-padding-inline() {
+  padding-inline: 16px;
+
+  @include on-tablet {
+    padding-inline: 44px;
+  }
+
+  @include on-desktop {
+    max-width: 1024px;
+    margin-inline: auto;
+    padding-inline: 44px;
+  }
+
+  @include on-desktop-xl {
+    max-width: 1280px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-inline: 44px;
+  }
+}
+
+@mixin content-top-bar-padding-inline() {
+  padding-inline: 16px;
+
+  @include on-tablet {
+    padding-inline: 16px;
+  }
+
+  @include on-desktop {
+    padding-inline: 32px;
+  }
+
+  @include on-desktop-xl {
+    padding-inline: 32px;
+  }
+}
+
+@mixin page-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 16px;
+
+  @include on-tablet {
+    grid-template-columns: repeat(8, 1fr);
+    column-gap: 24px;
+  }
+
+  @include on-desktop {
+    grid-template-columns: repeat(8, 1fr);
+    column-gap: 24px;
+  }
+
+  @include on-desktop-xl {
+    grid-template-columns: 120px repeat(8, 1fr);
+    column-gap: 24px;
+  }
+}
+
+@mixin transision {
+  transform: scale(1.2);
+  transition: transform 0.3s ease;
 }
